target/release/build/crossbeam-utils-8de2e9994c31bfe7/stderr
error[E0412]: cannot find type `AtomicU128` in module `core::sync::atomic`
 --> <anon>:1:38
  |
1 |   pub type Probe = core::sync::atomic::AtomicU128;
  |                                        ^^^^^^^^^^ help: a struct with a similar name exists: `AtomicU16`
 --> /rustc/29483883eed69d5fb4db01964cdf2af4d86e9cb2/library/core/src/sync/atomic.rs:3710:1
 ::: /rustc/29483883eed69d5fb4db01964cdf2af4d86e9cb2/library/core/src/sync/atomic.rs:3727:1
  |
  = note: similarly named struct `AtomicU16` defined here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0412`.
